------------------
 * MixMonitor hooks now have IDs associated with them which can be used to
   assign a target to StopMixMonitor. Use of MixMonitor's i(variable) option
   will allow storage of the MixMontior ID in a channel variable. StopMixmonitor
   now accepts that ID as an argument.

 * Added 'm' option, which stores a copy of the recording as a voicemail in the
   indicated mailboxes.


OSP Applications
-------------------
 * Increased the default number of allowed destinations from 5 to 12.


Page
-------------------
 * The app_page application now no longer depends on DAHDI or app_meetme.  It
   has been re-architected to use app_confbridge internally.


Queue
-------------------
 * Added queue options autopausebusy and autopauseunavail for automatically
   pausing a queue member when their device reports busy or congestion.

 * The 'ignorebusy' option for queue members has been deprecated in favor of
   the option 'ringinuse. Also a 'queue set ringinuse' CLI command has been
   added as well as an AMI action 'QueueMemberRingInUse' to set this variable on a
   per interface basis. Individual ringinuse values can now be set in
   queues.conf via an argument to member definitions. Lastly, the queue
   'ringinuse' setting now only determines defaults for the per member
   'ringinuse' setting and does not override per member settings like it does
   in earlier versions.

 * Added 'F()' option. Similar to the dial option, this can be supplied with
   arguments indicating where the callee should go after the caller is hung up,
   or without options specified, the priority after the Queue will be used.

 * Added new option log_member_name_as_agent, which will cause the membername to
   be logged in the agent field for ADDMEMBER and REMOVEMEMBER queue events if a
   state_interface has been set.


SayUnixTime
------------------
 * Added 'j' option to SayUnixTime. SayUnixTime no longer auto jumps to extension